@@ -1,10 +1,0 @@
-PolicyKit is an application-level toolkit for defining and handling the
-policy that allows unprivileged processes to speak to privileged processes:
-It is a framework for centralizing the decision making process with respect
-to granting access to privileged operations for unprivileged applications.
-PolicyKit is specifically targeting applications in rich desktop environments
-on multi-user UNIX-like operating systems. It does not imply or rely on any
-exotic kernel features.
-
-This package provides a D-Bus session bus service for bringing up
-authentication dialogs used for obtaining privileges.
