@@ -1,63 +1,0 @@
-@comment $NetBSD: PLIST,v 1.6 2018/01/02 10:45:54 jperkin Exp $
-bin/polkit-gnome-authorization
-bin/polkit-gnome-example
-include/PolicyKit/polkit-gnome/polkit-gnome-action.h
-include/PolicyKit/polkit-gnome/polkit-gnome-auth.h
-include/PolicyKit/polkit-gnome/polkit-gnome-context.h
-include/PolicyKit/polkit-gnome/polkit-gnome-toggle-action.h
-include/PolicyKit/polkit-gnome/polkit-gnome.h
-lib/libpolkit-gnome.la
-lib/pkgconfig/polkit-gnome.pc
-libexec/polkit-gnome-manager
-share/PolicyKit/policy/org.gnome.policykit.examples.policy
-share/applications/polkit-gnome-authorization.desktop
-share/dbus-1/services/gnome-org.freedesktop.PolicyKit.AuthenticationAgent.service
-share/dbus-1/services/org.gnome.PolicyKit.AuthorizationManager.service
-share/dbus-1/services/org.gnome.PolicyKit.service
-share/gconf/schemas/polkit-gnome.schemas
-share/gtk-doc/html/polkit-gnome/PolKitGnomeAction.html
-share/gtk-doc/html/polkit-gnome/PolKitGnomeContext.html
-share/gtk-doc/html/polkit-gnome/PolKitGnomeToggleAction.html
-share/gtk-doc/html/polkit-gnome/auth-details.png
-share/gtk-doc/html/polkit-gnome/auth-retain-always.png
-share/gtk-doc/html/polkit-gnome/auth-retain-session.png
-share/gtk-doc/html/polkit-gnome/auth-root.png
-share/gtk-doc/html/polkit-gnome/auth-self.png
-share/gtk-doc/html/polkit-gnome/auth-wheel-group-1.png
-share/gtk-doc/html/polkit-gnome/auth-wheel-group-2.png
-share/gtk-doc/html/polkit-gnome/home.png
-share/gtk-doc/html/polkit-gnome/index.html
-share/gtk-doc/html/polkit-gnome/index.sgml
-share/gtk-doc/html/polkit-gnome/left.png
-share/gtk-doc/html/polkit-gnome/license.html
-share/gtk-doc/html/polkit-gnome/polkit-gnome-example-auth-dialog-twiddle.png
-share/gtk-doc/html/polkit-gnome/polkit-gnome-example-screenshot-authorized.png
-share/gtk-doc/html/polkit-gnome/polkit-gnome-example-screenshot.png
-share/gtk-doc/html/polkit-gnome/polkit-gnome-polkit-gnome-auth.html
-share/gtk-doc/html/polkit-gnome/polkit-gnome.devhelp
-share/gtk-doc/html/polkit-gnome/polkit-gnome.devhelp2
-share/gtk-doc/html/polkit-gnome/ref-auth-daemon.html
-share/gtk-doc/html/polkit-gnome/ref-core.html
-share/gtk-doc/html/polkit-gnome/right.png
-share/gtk-doc/html/polkit-gnome/style.css
-share/gtk-doc/html/polkit-gnome/up.png
-share/locale/ar/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/ca/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/cs/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/da/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/de/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/el/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/en_GB/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/es/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/fi/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/fr/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/he/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/hu/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/ja/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/pl/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/pt/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/pt_BR/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/ru/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/sk/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/sv/LC_MESSAGES/PolicyKit-gnome.mo
-share/locale/zh_CN/LC_MESSAGES/PolicyKit-gnome.mo
