@@ -1,16 +1,0 @@
-# $NetBSD: buildlink3.mk,v 1.12 2022/06/28 11:35:50 wiz Exp $
-
-BUILDLINK_TREE+=	policykit-gnome
-
-.if !defined(POLICYKIT_GNOME_BUILDLINK3_MK)
-POLICYKIT_GNOME_BUILDLINK3_MK:=
-
-BUILDLINK_API_DEPENDS.policykit-gnome+=	policykit-gnome>=0.9.2
-BUILDLINK_ABI_DEPENDS.policykit-gnome+=	policykit-gnome>=0.9.2nb48
-BUILDLINK_PKGSRCDIR.policykit-gnome?=	../../security/policykit-gnome
-
-.include "../../security/policykit/buildlink3.mk"
-.include "../../sysutils/dbus-glib/buildlink3.mk"
-.endif # POLICYKIT_GNOME_BUILDLINK3_MK
-
-BUILDLINK_TREE+=	-policykit-gnome
